fix modal-close on mobile

--- a/src/css/_components.css
+++ b/src/css/_components.css
@@ -317,4 +317,8 @@ a:hover {
     border-radius: 0;
   }
 
+  .modal-close {
+    margin-left: 185px;
+  }
+
 }
